# investment-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-06-21-confidence-rubric.md  2026-06-21-multi-agent-activation-sub1.md  2026-06-21-multi-agent-activation-sub2.md  2026-06-21-multi-agent-activation-sub3.md  2026-06-21-production-refactor.md  2026-06-27-multi-agent-activation-sub3-revert.md
docs/superpowers/specs/: 2026-06-21-confidence-rubric-design.md  2026-06-21-multi-agent-activation-design.md  2026-06-21-multi-agent-activation-sub2-design.md  2026-06-21-multi-agent-activation-sub3-design.md  2026-06-21-production-refactor-design.md  2026-06-27-multi-agent-activation-sub3-revert-design.md
notebooks/: 01_single_agent.ipynb  02_crew_basics.ipynb  03_crew_events.ipynb  04_async_tasks.ipynb
scripts/: generate_notebooks.py
src/alphaquant/: __init__.py  __main__.py  cli.py  config.py  core.py  exceptions.py  llm.py  main.py
src/alphaquant/agents/: __init__.py  company_resolver.py  competitor_analyst.py  financial_analyst.py  market_analyst.py  news_analyst.py  report_writer.py  risk_analyst.py  valuation_analyst.py
src/alphaquant/api/: routes.py  schemas.py
src/alphaquant/crews/: __init__.py  (+1 more)
tests/: conftest.py  smoke.py  test_agents.py  test_api.py  test_crew.py  test_crew_events.py  test_db.py  test_flow.py  test_models_literals.py  test_observability.py  test_observability_wiring.py  test_rating.py  test_report_optional.py  test_scoring.py  test_tools.py
(+67 files in other folders)
