[project]
name = "alphaquant"
version = "0.1.0"
description = "AI Investment Research Analyst"
requires-python = ">=3.11,<3.13"
dependencies = [
    "crewai>=0.80,<1.0",
    "litellm>=1.40",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "alpha-vantage>=3.0",
    "finnhub-python>=2.4",
    "tenacity>=8.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"